fixed text alignment photos

--- a/src/components/photos/style.scss
+++ b/src/components/photos/style.scss
@@ -11,7 +11,7 @@
         font-weight: 400;
         line-height: normal;
         text-align: center;
-        margin: 0;
+        margin-bottom: 32px;
         padding-left: 2px;
     }
 
